# codegraph-mcp

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  fly.toml  pyproject.toml  railway.json  repomix-output.xml  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: README.md  local-build-and-semantic.md  release-cycle.md  setup-and-mcp.md
sample_repo/src/: Greeting.kt  main.ts  utils.ts
src/codegraph_mcp/: __init__.py  __main__.py  enums.py  logging_config.py  models.py
src/codegraph_mcp/graph/: builder.py  query_engine.py
src/codegraph_mcp/parser/: base.py  java.py  kotlin.py  typescript.py
src/codegraph_mcp/semantic/: __init__.py  build.py  embeddings.py  vector_index.py
src/codegraph_mcp/server/: mcp_server.py
src/codegraph_mcp/storage/: kuzu_store.py  sqlite_store.py
src/codegraph_mcp/utils/: scanner.py
tests/: conftest.py  test_embeddings.py  test_graph_builder.py  test_graph_ui.py  test_kuzu_store.py  test_mcp_server.py  test_parser.py  test_query_engine.py  test_scanner.py  test_storage.py
