[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph-mcp"
version = "0.1.0"
description = "MCP server that builds a knowledge graph of a software codebase"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "mcp>=1.6,<2.0",
    "uvicorn>=0.30",
    "starlette>=0.40",
    "tree-sitter>=0.24.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
codegraph-mcp = "codegraph_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
